<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimaryDark"
        android:text="Find Best Deposits"
        android:textColor="#F7F7F7"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="151dp"
        android:text="@string/amount"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="31dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/rs_10000"
        android:textColorHighlight="#00141414"
        android:textColorHint="#000C0C0C"
        android:textColorLink="#000A0A0A"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#4DC97408"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="77dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="153dp"
        android:text="@string/when_will_you_deposit"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_below="@id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lay1"
            android:layout_width="367dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="144dp"
                android:layout_height="42dp"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:text="@string/once_at_a_start"
                android:textColor="#940C0C0C" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:gravity="center|start"
                android:text="@string/fixed_date_every_month"
                android:textColor="#950C0C0C" />

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/as_and_when_i_have_money"
                android:textColor="#950C0C0C" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="247dp"
        android:layout_marginEnd="-10dp"
        android:text="@string/for_how_long_will_you_invest"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="31dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lin1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-3dp">

        <EditText
            android:id="@+id/year"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="false"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="0dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/year"
            android:textColor="#81070707"
            android:textColorHighlight="#00141414"
            android:textColorHint="#000C0C0C"
            android:textColorLink="#000A0A0A"
            android:textSize="14sp"
            android:textStyle="italic"
            app:backgroundTint="#4DC97408"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="77dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lin2"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@id/lin1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="-7dp"
        android:layout_marginEnd="7dp">

        <EditText
            android:id="@+id/month"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView5"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="false"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="0dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/month"
            android:textColor="#81070707"
            android:textColorHighlight="#00141414"
            android:textColorHint="#000C0C0C"
            android:textColorLink="#000A0A0A"
            android:textSize="14sp"
            android:textStyle="italic"
            app:backgroundTint="#4DC97408"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="77dp" />

        <EditText
            android:id="@+id/day"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_above="@id/textView3"
            android:layout_below="@id/textView5"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="false"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="-2dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/day"
            android:textColor="#81070707"
            android:textColorHighlight="#00141414"
            android:textColorHint="#000C0C0C"
            android:textColorLink="#000A0A0A"
            android:textSize="14sp"
            android:textStyle="italic"
            app:backgroundTint="#4DC97408"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="77dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="171dp"
        android:layout_marginBottom="125dp"
        android:text="@string/sen_cit"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="404dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="175dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/x"
            android:layout_width="217dp"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="start|end"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="283dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/yes"
            android:textColor="#940C0C0C" />

        <RadioButton
            android:id="@+id/y"
            android:layout_width="217dp"
            android:layout_height="51dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|end"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="276dp"
            android:layout_weight="1"
            android:checked="true"
            android:gravity="center|start"
            android:text="@string/no"
            android:textColor="#950C0C0C" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-1dp"
        android:layout_marginBottom="232dp"
        android:text="@string/reinvest_interest"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="425dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="78dp"
        android:layout_toEndOf="@id/lin2"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/a"
            android:layout_width="199dp"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="start|end"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="283dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/yes"
            android:textColor="#940C0C0C" />

        <RadioButton
            android:id="@+id/b"
            android:layout_width="217dp"
            android:layout_height="51dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|end"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="276dp"
            android:layout_weight="1"
            android:checked="true"
            android:gravity="center|start"
            android:text="@string/no"
            android:textColor="#950C0C0C" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="17dp"
        android:background="#4DC97408"
        android:text="@string/search_now"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>
